# knx-sensor

./: .clang-format  .gitignore  README.md  Sensormodul.code-workspace  library.properties  platformio.ini  upload_script.py
beta/: BuildRelease.cmd  Sensormodul-v3.0-beta.xml  Sensormodul-v3.1-beta.xml  Sensormodul-v3.2-beta.xml  Sensormodul-v3.3-beta.xml  Sensormodul-v3.6-beta.xml
doc/: Applikationsbeschreibung-Sensor.md  KO-Schema.txt  Konzept-KO-Verteilung.md  knx-dev-beta-setup.md  knx-dev-setup.md  knx-update-setup.md
examples/KNX_Berker_Temp_Hum_Sensor_V1.3/: EEPROM.h  KNX_Berker_Temp_Hum_Sensor_V1.3.ino  KNX_Callback.ino  Timer.h  kdevice_KNX_Externer_Temperatur_Sensor.h
examples/KNX_OneWire_Gateway_FW33e/KONNEKTING_KNX_OneWire_Gateway_FW33e/: 0_setup.h  1_loop.ino  2_KNX_Message.h  3_readSensorID.h  4_readSensor.h  5_iButton.h  6_MultiSensor.h  DS18B20_I2C.cpp  DS18B20_I2C.h  DS2408.cpp  DS2408.h  DS2482_OneWire.cpp  DS2482_OneWire.h  EEPROM.h  FileAsEEPROM.cpp  FileAsEEPROM.h  KNX_Callback.ino  KONNEKTING_KNX_OneWire_Gateway_FW33e.ino  OneWire_Multisensor.cpp  OneWire_Multisensor.h  kdevice_KNX_1-Wire_Gateway_firmware_33.h
linux/: CMakeLists.txt  main.cpp
release/: BuildRelease.cmd  Sensormodul-v1.0-10.xml  Sensormodul-v1.1-20.xml  Sensormodul-v1.2-40.xml  Sensormodul-v1.3-80.xml  Sensormodul-v1.5-20.xml  Sensormodul-v2.0-10.xml  Sensormodul-v2.1-20.xml  Sensormodul-v2.2-40.xml  Sensormodul-v2.3-80.xml  Sensormodul-v2.4-10.xml  Sensormodul-v2.5-20.xml  Sensormodul-v2.6-40.xml  Sensormodul-v2.7-80.xml  Sensormodul-v3.0.xml  Sensormodul-v3.8.xml
src/: BME280.cpp  BME280.h  Sensor.cpp  Sensor.h  SensorBME280.cpp  SensorBME280.h  SensorBME680.cpp  SensorBME680.h  SensorHDC1080.cpp  SensorHDC1080.h  SensorSCD30.cpp  SensorSCD30.h  Sensormodul-103.xml  Sensormodul-104.xml  Sensormodul-105.xml  Sensormodul.cpp  Sensormodul.debug.xml  Sensormodul.frame.out.xml  Sensormodul.frame.xml  Sensormodul.h  Sensormodul.parts.xml  Sensormodul.share.xml  Sensormodul.templ.out.xml  Sensormodul.templ.xml  Sensormodul.xml  main.cpp
src/bsec/: bsec.cpp  bsec.h
src/bsec/bme680/: bme680_defs.h  changelog.md
